--- a/offline.html
+++ b/offline.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>You're Offline</title>
-  <link rel="stylesheet" href="/css/offline.css">
+  <link rel="stylesheet" href="css/offline.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
       <div id="image"></div>
     </div>
   </div>
-  <script src="/js/cats.js"></script>
+  <script src="js/cats.js"></script>
 </body>
 
 </html>
